Remove commented out code and styles. Add .text-truncate class to changes block headers to fix overflow issue. Add styles to display ui-select blocks as disabled properly.

--- a/com.mobi.web/src/main/resources/public/css/customMaterial.scss
+++ b/com.mobi.web/src/main/resources/public/css/customMaterial.scss
@@ -12,17 +12,6 @@ $secondary: (
     dark: $mobi-secondary-700,
     light: $mobi-secondary-100
 );
-/*$primary: (
-    color: #303f9f,
-    dark: darken(#303f9f, 10%),
-    light: lighten(#303f9f, 10%)
-);
-
-$secondary: (
-    color: #3f51b5,
-    dark: darken(#3f51b5, 10%),
-    light: lighten(#3f51b5, 10%)
-);*/
 
 $colors: (
     body: rgba(0,0,0,0.87)
